{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 63,
  "lineage": "5c152d55-2ff5-3fd3-8eb5-7d9957150d01",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:security-group/sg-0edef456c339595e1",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0edef456c339595e1",
            "ingress": [],
            "name": "dadjokes-eks-cluster-2025091307334098060000000a",
            "name_prefix": "dadjokes-eks-cluster-",
            "owner_id": "863518423554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dadjokes-eks-cluster"
            },
            "tags_all": {
              "Name": "dadjokes-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:security-group/sg-0fed1f22c5a8acecc",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0fed1f22c5a8acecc",
            "ingress": [],
            "name": "dadjokes-eks-node-2025091307334098170000000b",
            "name_prefix": "dadjokes-eks-node-",
            "owner_id": "863518423554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dadjokes-eks-node",
              "kubernetes.io/cluster/dadjokes-eks": "owned"
            },
            "tags_all": {
              "Name": "dadjokes-eks-node",
              "kubernetes.io/cluster/dadjokes-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1168531579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0edef456c339595e1",
            "security_group_rule_id": "sgr-07572a959ba4c93b3",
            "self": false,
            "source_security_group_id": "sg-0fed1f22c5a8acecc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1638736491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-025078045ab1d74af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2088931506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-062b5a5c5fccc7f1f",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2294230367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-0b053a8e64bc71d6b",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1107118793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-06bfedea73c285cb8",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1386313448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-04ead08e38b0f2d4c",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-905987363",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-0fa04b424cef278b3",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1842957436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-0687e2d90441fcc74",
            "self": false,
            "source_security_group_id": "sg-0edef456c339595e1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2179376531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-0541b7ed0d1bb5206",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1977345573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-0feabf5a40cf2bdb0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3515106762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fed1f22c5a8acecc",
            "security_group_rule_id": "sgr-007f622b7aff2133a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:network-acl/acl-068f24f4090cc8918",
            "default_network_acl_id": "acl-068f24f4090cc8918",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-068f24f4090cc8918",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "863518423554",
            "subnet_ids": [
              "subnet-0479812e2c5785e6f",
              "subnet-08e4d03101bd1d7c5",
              "subnet-0d7f0e76d19176fd9",
              "subnet-0db9adf04a5d719e7"
            ],
            "tags": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:route-table/rtb-03028ac5c9ba10dfc",
            "default_route_table_id": "rtb-03028ac5c9ba10dfc",
            "id": "rtb-03028ac5c9ba10dfc",
            "owner_id": "863518423554",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:security-group/sg-0f4059226a1092999",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f4059226a1092999",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "863518423554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-default"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a71149d1a7d0294a",
            "arn": "arn:aws:ec2:il-central-1:863518423554:elastic-ip/eipalloc-0a71149d1a7d0294a",
            "domain": "vpc",
            "id": "eipalloc-0a71149d1a7d0294a",
            "network_border_group": "il-central-1",
            "public_dns": "ec2-51-84-211-212.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.211.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dadjokes-eks-vpc-il-central-1a"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-il-central-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:internet-gateway/igw-0463606a4a667ca32",
            "id": "igw-0463606a4a667ca32",
            "owner_id": "863518423554",
            "tags": {
              "Name": "dadjokes-eks-vpc"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a71149d1a7d0294a",
            "association_id": "eipassoc-05c96f49929563e5d",
            "connectivity_type": "public",
            "id": "nat-01d5ee34b5c5d90ae",
            "network_interface_id": "eni-032f22321bd41c259",
            "private_ip": "10.0.101.78",
            "public_ip": "51.84.211.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0479812e2c5785e6f",
            "tags": {
              "Name": "dadjokes-eks-vpc-il-central-1a"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-il-central-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d6de6c1b9ee3a84f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d5ee34b5c5d90ae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6de6c1b9ee3a84f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0463606a4a667ca32",
            "id": "r-rtb-0b36db9defdf2d09f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b36db9defdf2d09f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:route-table/rtb-0d6de6c1b9ee3a84f",
            "id": "rtb-0d6de6c1b9ee3a84f",
            "owner_id": "863518423554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dadjokes-eks-vpc-private"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:route-table/rtb-0b36db9defdf2d09f",
            "id": "rtb-0b36db9defdf2d09f",
            "owner_id": "863518423554",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dadjokes-eks-vpc-public"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b78ff7a90faa0f",
            "route_table_id": "rtb-0d6de6c1b9ee3a84f",
            "subnet_id": "subnet-08e4d03101bd1d7c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0216ab456098ded4a",
            "route_table_id": "rtb-0d6de6c1b9ee3a84f",
            "subnet_id": "subnet-0d7f0e76d19176fd9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0938d7179e9651d70",
            "route_table_id": "rtb-0b36db9defdf2d09f",
            "subnet_id": "subnet-0479812e2c5785e6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6410eba263355b3",
            "route_table_id": "rtb-0b36db9defdf2d09f",
            "subnet_id": "subnet-0db9adf04a5d719e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:subnet/subnet-08e4d03101bd1d7c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e4d03101bd1d7c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863518423554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dadjokes-eks-vpc-private-il-central-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-private-il-central-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:subnet/subnet-0d7f0e76d19176fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7f0e76d19176fd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863518423554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dadjokes-eks-vpc-private-il-central-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-private-il-central-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:subnet/subnet-0479812e2c5785e6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0479812e2c5785e6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863518423554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dadjokes-eks-vpc-public-il-central-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-public-il-central-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:subnet/subnet-0db9adf04a5d719e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9adf04a5d719e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863518423554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dadjokes-eks-vpc-public-il-central-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc-public-il-central-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00e10c55bd763f0ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:863518423554:vpc/vpc-00e10c55bd763f0ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068f24f4090cc8918",
            "default_route_table_id": "rtb-03028ac5c9ba10dfc",
            "default_security_group_id": "sg-0f4059226a1092999",
            "dhcp_options_id": "dopt-01914a423ee76dd9c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e10c55bd763f0ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03028ac5c9ba10dfc",
            "owner_id": "863518423554",
            "tags": {
              "Name": "dadjokes-eks-vpc"
            },
            "tags_all": {
              "Name": "dadjokes-eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}